chore: fix typos and require subr-x

--- a/README.org
+++ b/README.org
@@ -63,7 +63,7 @@ The following blocks are represented as special blocks.
 - tip
 - info
 - warning
-- imoprtant
+- important
 - caution
 - notice
 - lead
